--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
 body, input, button {
   font: 16px Roboto, sans-serif;
 }
+h1, h2, h3, h4, p {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 button {
   cursor: pointer;
 }
